--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         {id: 35, code: "SK2FORUM", result: 0, response: ''},
         {id: 36, code: "SENAINSSA", result: 0, response: ''},
         {id: 37, code: "2S2E2V2E2N", result: 0, response: ''},
+        {id: 38, code: "COCOJOA", result: 0, response: ''},
+        {id: 39, code: "CHECKCHECK ", result: 0, response: ''},
     ];
 
     function req() {
