--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <a target="_blank" rel="noopener noreferrer" href="https://forum.netmarble.com/sk2/view/13/746266">회원 번호 확인 법</a>
 <hr>
 <span>쿠폰 코드 수정 가능.</span><br><br>
-<span>4/12 : 2STHGINNEVES 추가</span><br><br>
+<span>4/14 : SENAMOON,  KEKESENA2, SENAGA 추가</span><br><br>
 <a target="_blank" rel="noopener noreferrer" href="https://forum.netmarble.com/sk2/view/27/770604">코드 출처 : 마스터냥이</a><br>
 
 
