--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>세나2 쿠폰 자동등록</title>
 </head>
 <body>
 <span>회원 번호 : </span><input type="text" id="uid">
@@ -10,7 +10,7 @@
 <a target="_blank" rel="noopener noreferrer" href="https://forum.netmarble.com/sk2/view/13/746266">회원 번호 확인 법</a>
 <hr>
 <span>쿠폰 코드 수정 가능.</span><br><br>
-<span>4/14 : SENAMOON,  KEKESENA2, SENAGA 추가</span><br><br>
+<span>4/15 : 43~63 추가, 회원번호 저장 기능 추가</span><br><br>
 <a target="_blank" rel="noopener noreferrer" href="https://forum.netmarble.com/sk2/view/27/770604">코드 출처 : 마스터냥이</a><br>
 
 
@@ -41,7 +41,13 @@
           return unescape(y);
         }
       }
+
+      return null
     }
+
+    let uid = getCookie('uid')
+
+    if(uid){$('#uid').val(uid)}
 
     var tabledata = [
         {id: 1, code: "KINGADEL", result: 0, response: '', description: '요청 전'},
@@ -111,6 +117,7 @@
 
     function req() {
         var uid = $('#uid').val()
+        setCookie('uid', uid)
         for (var a in tabledata) {
             let i = a
             $.ajax({
