--- a/index.html
+++ b/index.html
@@ -113,6 +113,17 @@
         {id: 61, code: "SENA2GUIDE", result: 0, response: '', description: '요청 전'},
         {id: 62, code: "SENA2RUDY", result: 0, response: '', description: '요청 전'},
         {id: 63, code: "LUVCOCO", result: 0, response: '', description: '요청 전'},
+        {id: 64, code: "INFINITYWAR", result: 0, response: '', description: '요청 전'},
+        {id: 65, code: "77INFINITE77", result: 0, response: '', description: '요청 전'},
+        {id: 66, code: "GREATSENA", result: 0, response: '', description: '요청 전'},
+        {id: 67, code: "BONBUJANGNIM", result: 0, response: '', description: '요청 전'},
+        {id: 68, code: "SPECIALTICKET", result: 0, response: '', description: '요청 전'},
+        {id: 69, code: "JJANGSENA", result: 0, response: '', description: '요청 전'},
+        {id: 70, code: "HAPPYSENAS2", result: 0, response: '', description: '요청 전'},
+        {id: 71, code: "SENA2KING", result: 0, response: '', description: '요청 전'},
+        {id: 72, code: "SENA2DOWN", result: 0, response: '', description: '요청 전'},
+        {id: 73, code: "PLAYSENATWO", result: 0, response: '', description: '요청 전'},
+        {id: 74, code: "RUNSENA2", result: 0, response: '', description: '요청 전'},
     ];
 
     function req() {
