--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
         {id: 72, code: "SENA2DOWN", result: 0, response: '', description: '요청 전'},
         {id: 73, code: "PLAYSENATWO", result: 0, response: '', description: '요청 전'},
         {id: 74, code: "RUNSENA2", result: 0, response: '', description: '요청 전'},
+        {id: 75, code: "SENADDABONG", result: 0, response: '', description: '요청 전'},
     ];
 
     function req() {
