--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <a target="_blank" rel="noopener noreferrer" href="https://forum.netmarble.com/sk2/view/13/746266">회원 번호 확인 법</a>
 <hr>
 <span>쿠폰 코드 수정 가능.</span><br><br>
-<span>4/17 : 64~74 추가</span><br><br>
-<a target="_blank" rel="noopener noreferrer" href="https://forum.netmarble.com/sk2/view/27/770604">코드 출처 : 마스터냥이</a><br>
+<span>회원 정보 쿠키 저장.</span><br><br>
+<span>4/19 : SENA2LUCKY, SENA2DERUWA 추가</span><br><br>
+<a target="_blank" rel="noopener noreferrer" href="https://forum.netmarble.com/sk2/view/27/786337">코드 출처 : 마스터냥이</a><br>
 
 
 <div id="example-table"></div>
@@ -125,6 +126,8 @@
         {id: 73, code: "PLAYSENATWO", result: 0, response: '', description: '요청 전'},
         {id: 74, code: "RUNSENA2", result: 0, response: '', description: '요청 전'},
         {id: 75, code: "SENADDABONG", result: 0, response: '', description: '요청 전'},
+        {id: 76, code: "SENA2LUCKY", result: 0, response: '', description: '요청 전'},
+        {id: 77, code: "SENA2DERUWA", result: 0, response: '', description: '요청 전'},
     ];
 
     function req() {
