--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <hr>
 <span>쿠폰 코드 수정 가능.</span><br><br>
 <span>회원 정보 쿠키 저장.</span><br><br>
-<span>4/19 : SENA2LUCKY, SENA2DERUWA 추가</span><br><br>
+<span>4/22 : EVANVSRUDY, DARKBLACKSHANE, LUCKYTICKET, MAINSENA2, JAEMI2TH 추가</span><br><br>
 <a target="_blank" rel="noopener noreferrer" href="https://forum.netmarble.com/sk2/view/27/786337">코드 출처 : 마스터냥이</a><br>
 
 
@@ -128,6 +128,11 @@
         {id: 75, code: "SENADDABONG", result: 0, response: '', description: '요청 전'},
         {id: 76, code: "SENA2LUCKY", result: 0, response: '', description: '요청 전'},
         {id: 77, code: "SENA2DERUWA", result: 0, response: '', description: '요청 전'},
+        {id: 78, code: "EVANVSRUDY", result: 0, response: '', description: '요청 전'},
+        {id: 79, code: "DARKBLACKSHANE", result: 0, response: '', description: '요청 전'},
+        {id: 80, code: "LUCKYTICKET", result: 0, response: '', description: '요청 전'},
+        {id: 81, code: "MAINSENA2", result: 0, response: '', description: '요청 전'},
+        {id: 82, code: "JAEMI2TH", result: 0, response: '', description: '요청 전'},
     ];
 
     function req() {
