--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <hr>
 <span>쿠폰 코드 수정 가능.</span><br><br>
 <span>회원 정보 쿠키 저장.</span><br><br>
-<span>4/22 : EVANVSRUDY, DARKBLACKSHANE, LUCKYTICKET, MAINSENA2, JAEMI2TH, PUKISENA 추가</span><br><br>
+<span>4/22 : EVANVSRUDY, DARKBLACKSHANE, LUCKYTICKET, MAINSENA2, JAEMI2TH, PUKISENA, KEKEEVAN, PRETTYCOCO 추가</span><br><br>
 <a target="_blank" rel="noopener noreferrer" href="https://forum.netmarble.com/sk2/view/27/786337">코드 출처 : 마스터냥이</a><br>
 
 
@@ -134,6 +134,8 @@
         {id: 81, code: "MAINSENA2", result: 0, response: '', description: '요청 전'},
         {id: 82, code: "JAEMI2TH", result: 0, response: '', description: '요청 전'},
         {id: 83, code: "PUKISENA", result: 0, response: '', description: '요청 전'},
+        {id: 84, code: "KEKEEVAN", result: 0, response: '', description: '요청 전'},
+        {id: 85, code: "PRETTYCOCO", result: 0, response: '', description: '요청 전'},
     ];
 
     function req() {
