--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
         {id: 83, code: "PUKISENA", result: 0, response: '', description: '요청 전'},
         {id: 84, code: "KEKEEVAN", result: 0, response: '', description: '요청 전'},
         {id: 85, code: "PRETTYCOCO", result: 0, response: '', description: '요청 전'},
+        {id: 86, code: "CUTYCOCO", result: 0, response: '', description: '요청 전'},
     ];
 
     function req() {
