--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <hr>
 <span>쿠폰 코드 수정 가능.</span><br><br>
 <span>회원 정보 쿠키 저장.</span><br><br>
-<span>4/22 : EVANVSRUDY, DARKBLACKSHANE, LUCKYTICKET, MAINSENA2, JAEMI2TH, PUKISENA, KEKEEVAN, PRETTYCOCO, CUTYCOCO 추가</span><br><br>
+<span>4/23 : 87~92 추가</span><br><br>
 <a target="_blank" rel="noopener noreferrer" href="https://forum.netmarble.com/sk2/view/27/786337">코드 출처 : 마스터냥이</a><br>
 
 
@@ -137,6 +137,12 @@
         {id: 84, code: "KEKEEVAN", result: 0, response: '', description: '요청 전'},
         {id: 85, code: "PRETTYCOCO", result: 0, response: '', description: '요청 전'},
         {id: 86, code: "CUTYCOCO", result: 0, response: '', description: '요청 전'},
+        {id: 87, code: "GOMAWAYOS2", result: 0, response: '', description: '요청 전'},
+        {id: 88, code: "SIDANEUNGEOJI", result: 0, response: '', description: '요청 전'},
+        {id: 89, code: "7KNIGHTS2", result: 0, response: '', description: '요청 전'},
+        {id: 90, code: "GOGOYOEMYEONG", result: 0, response: '', description: '요청 전'},
+        {id: 91, code: "SENA2JOA", result: 0, response: '', description: '요청 전'},
+        {id: 92, code: "SENA2FOREVER", result: 0, response: '', description: '요청 전'},
     ];
 
     function req() {
