--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <hr>
 <span>쿠폰 코드 수정 가능.</span><br><br>
 <span>회원 정보 쿠키 저장.</span><br><br>
-<span>4/23 : 87~92 추가</span><br><br>
+<span>4/25 : 93~95 추가</span><br><br>
 <a target="_blank" rel="noopener noreferrer" href="https://forum.netmarble.com/sk2/view/27/786337">코드 출처 : 마스터냥이</a><br>
 
 
@@ -143,6 +143,9 @@
         {id: 90, code: "GOGOYOEMYEONG", result: 0, response: '', description: '요청 전'},
         {id: 91, code: "SENA2JOA", result: 0, response: '', description: '요청 전'},
         {id: 92, code: "SENA2FOREVER", result: 0, response: '', description: '요청 전'},
+        {id: 93, code: "MINGSARANGHE", result: 0, response: '', description: '요청 전'},
+        {id: 94, code: "DANJANGNIM", result: 0, response: '', description: '요청 전'},
+        {id: 95, code: "SAYSENA2", result: 0, response: '', description: '요청 전'},
     ];
 
     function req() {
