--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>세나2 쿠폰 자동등록</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NJTZY0W968"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-NJTZY0W968');
+    </script>
 </head>
 <body>
 <span>회원 번호 : </span><input type="text" id="uid">
@@ -11,7 +20,7 @@
 <hr>
 <span>쿠폰 코드 수정 가능.</span><br><br>
 <span>회원 정보 쿠키 저장.</span><br><br>
-<span>4/27 : 96~97 추가</span><br><br>
+<span>4/28 : 98 추가</span><br><br>
 <a target="_blank" rel="noopener noreferrer" href="https://forum.netmarble.com/sk2/view/27/786337">코드 출처 : 마스터냥이</a><br>
 
 
@@ -148,6 +157,7 @@
         {id: 95, code: "SAYSENA2", result: 0, response: '', description: '요청 전'},
         {id: 96, code: "DANJANGNIMTHX", result: 0, response: '', description: '요청 전'},
         {id: 97, code: "HEHESENA", result: 0, response: '', description: '요청 전'},
+        {id: 97, code: "COMEBACKSENA", result: 0, response: '', description: '요청 전'},
     ];
 
     function req() {
