--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <hr>
 <span>쿠폰 코드 수정 가능.</span><br><br>
 <span>회원 정보 쿠키 저장.</span><br><br>
-<span>4/28 : 98 추가</span><br><br>
+<span>4/28 : ~100 추가</span><br><br>
 <a target="_blank" rel="noopener noreferrer" href="https://forum.netmarble.com/sk2/view/27/786337">코드 출처 : 마스터냥이</a><br>
 
 
@@ -158,6 +158,8 @@
         {id: 96, code: "DANJANGNIMTHX", result: 0, response: '', description: '요청 전'},
         {id: 97, code: "HEHESENA", result: 0, response: '', description: '요청 전'},
         {id: 98, code: "COMEBACKSENA", result: 0, response: '', description: '요청 전'},
+        {id: 99, code: "WASENADA", result: 0, response: '', description: '요청 전'},
+        {id: 100, code: "2PRESENTSENA2", result: 0, response: '', description: '요청 전'},
     ];
 
     function req() {
